# TindaAgent

./: .gitignore  README.md  test_versioning.py
release/source/: .env.example  .gitignore  .tinda_ports.list  README.md  _mini_colon_err.bat  _mini_colon_err2.bat  _mini_colon_err3.bat  _mini_colon_err4.bat  _mini_colon_err5.bat  _mini_colon_err6.bat  _mini_colon_err7.bat  _mini_ports.bat  _mini_ports2.bat  _mini_ports3.bat  _mini_stop_test.bat  _mini_stop_test2.bat  _mini_stop_test3.bat  convert_session.py  delete  delete.bat  delete.sh  doctor.bat  doctor.py  doctor.sh  package-lock.json  package.json  pyproject.toml  quick.bat  quick.sh  run_web.py  start.bat  start.sh  status.bat  status.ps1  status.sh  stop.bat  stop.sh  test_log.txt  test_run_terminal_chain.py  test_session_record.py  (+4 more)
release/source/.claude/: settings.json
release/source/.claude/commands/: commit.md  plan-feature.md  release.md
release/source/.claude/hooks/: skill-forced-eval-hook.sh
release/source/.tmp_test_md_parser/: render_markdown_check.js  sample.json
release/source/TindaAgent/: .env.example  README.md  requirements.txt
release/source/TindaAgent/CLI/: display.py  main.py  session_manager.py  settings.py
release/source/TindaAgent/Master/: demo.py  test.py  test_agent_context_roles.py  test_agent_model_disclosure_policy.py  test_chat_header_v178.py  test_chat_pending_terminal_confirm_guard.py  test_chat_terminal_confirm_locking.py  test_chat_tool_events_polling_guard.py  (+22 more)
release/source/scripts/: build-web.mjs  migrate_runtime_roots.py  normalize_tool_markers.py  sign_release.py
(+144 files in other folders)
