[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TindaAgent"
version = "1.10.0"
description = "TindaAgent — AI agent CLI and web platform"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "watchfiles",
    "openai",
    "python-dotenv",
    "pydantic",
    "prompt-toolkit>=3.0",
    "questionary",
    "tokenizers>=0.22",
    "jinja2>=3.1.0",
]

[project.scripts]
tinda = "TindaAgent.CLI.main:main"

[tool.setuptools.packages.find]
include = ["TindaAgent", "TindaAgent.*"]
